--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,10 @@
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.7
+  NewCops: enable
   Exclude:
     - 'spec/fixtures/**/*'
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
 Metrics/MethodLength:
   CountComments: false
